# TonatiuhXX

./: .gitignore
source/: CMakeLists.txt
source/SunPath/: CMakeLists.txt  SunPath.h
source/SunPath/calculators/: Location.cpp  Location.h  SunCalculator.cpp  SunCalculator.h  SunCalculatorET.h  SunCalculatorMB.cpp  SunCalculatorMB.h  SunCalculatorNREL.h  SunCalculatorRG.h
source/SunPath/calculators/MB/: SunPos.cpp  SunPos2.cpp
source/SunPath/data/: FormatTMY.cpp  FormatTMY.h  FormatWSN.h  SkyModel.h  SkyModelPI.h  SunFunctor.h
source/SunPath/math/: math.h
source/SunPath/math/geometry/: Interval.h  vec2d.h  vec3d.h
source/SunPath/math/matrices/: Matrix.h  MatrixNR.h
source/SunPath/math/sampling/: ErrorAnalysis.h  Interpolator.h  Summator.h
source/SunPath/samplers/: SkyKernels.h  SkySampler.cpp  SkySampler.h  SunSpatial.cpp  SunSpatial.h  SunTemporal.cpp  SunTemporal.h  TimeSampler.cpp  TimeSampler.h
source/application/: CMakeLists.txt
source/application/WeatherView/: TabData.cpp  TabWeights.cpp
source/application/WeatherView/TMY/: ParameterItem.cpp  ReaderTMY.cpp
source/application/WeatherView/plot/: Plotter.cpp
source/application/run/: FluxAnalysis.h
source/kernel/: CMakeLists.txt
source/kernel/run/: InstanceNode.cpp
source/libraries/: CMakeLists.txt
source/libraries/SunPathLib/: CMakeLists.txt
source/plugins/: CMakeLists.txt
source/plugins/air/: CMakeLists.txt
source/plugins/air/AirMirval/: CMakeLists.txt
source/plugins/air/TransmissivityATMParameters/: CMakeLists.txt  TransmissivityATMParameters.qrc
source/plugins/component/: CMakeLists.txt
source/plugins/component/ComponentHeliostatField/: CMakeLists.txt
source/plugins/material/: CMakeLists.txt
source/plugins/material/MaterialAngleDependentRefractive/: CMakeLists.txt
source/plugins/material/MaterialSpecular/: CMakeLists.txt
source/plugins/photons/: CMakeLists.txt
source/plugins/photons/PhotonsFile/: CMakeLists.txt
source/plugins/random/: CMakeLists.txt
source/plugins/random/RandomMersenneTwister/: CMakeLists.txt  RandomMersenneTwister.h
source/plugins/random/RandomRngStream/: CMakeLists.txt
source/plugins/shape/: CMakeLists.txt
source/plugins/shape/ShapeElliptic/: CMakeLists.txt
source/plugins/shape/ShapeFunctionXYZ/: CMakeLists.txt
source/plugins/shape/ShapeFunctionZ/: CMakeLists.txt
source/plugins/shape/ShapeHyperbolic/: CMakeLists.txt
source/plugins/shape/ShapeMapN/: CMakeLists.txt
source/plugins/shape/ShapeMesh/: CMakeLists.txt
source/plugins/sun/: CMakeLists.txt
source/plugins/sun/SunBuie/: CMakeLists.txt
source/plugins/sun/SunGaussian/: CMakeLists.txt
