cmake_minimum_required(VERSION 3.28)
project(MaterialPlugin)

# Add subdirectories for the components of the air plugin
# Uncomment the lines for the components you want to include

add_subdirectory(MaterialSpecular)
# add_subdirectory(MaterialOneSideSpecular)
# add_subdirectory(MaterialStandardRoughSpecular)
# add_subdirectory(MaterialAngleDependentSpecular)
# add_subdirectory(MaterialAngleDependentRefractive)
